--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,7 +4,7 @@ on:
   push
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,11 +13,12 @@ jobs:
         with:
           go-version: '1.20'
 
-      - name: Build
-        run: go build -v ./...
-
       - name: Test
         run: go test -v ./... 
+	
+      - name: Vet
+        run: go vet -v ./... 
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
